[BUG] Footer overlapping on widgets (Issue #18) (#19)
* bug: footer-overlap

* Update src/components/WidgetHolder/widgetHolder.module.scss

* Update src/components/Footer/footer.module.scss

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,8 +1,8 @@
 .app {
 	height: 100%;
+	display: flex;
 	gap: 16px;
 	padding: 32px;
-
-	display: flex;
+	padding-bottom: 0px;
 	flex-direction: column;
 }
