--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -6,9 +6,6 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: flex-end;
-	position: fixed;
-	bottom: 0;
-	right: 0;
 	padding-right: 24px;
 	p,
 	a {
