--- a/src/components/WidgetHolder/widgetHolder.module.scss
+++ b/src/components/WidgetHolder/widgetHolder.module.scss
@@ -3,6 +3,7 @@
 
 .widgetHolderWrapper {
 	padding: 8px;
+	flex: 1;
 	overflow: auto;
 	.widgetHolder {
 		display: flex;
